<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/windowBackgroundColor"
    tools:context=".AddTopicActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        app:titleTextColor="@android:color/white"
        app:title="@string/title_add_topic"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_title"
            android:padding="8dp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/topic_title_hint"
            android:textColorHint="@android:color/darker_gray"
            android:background="@android:color/white"
            android:nextFocusDown="@string/action_add"
            android:imeOptions="actionNext"/>
        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:minLines="5"
            android:hint="@string/topic_desctrption_hint"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:background="@android:color/white"
            android:gravity="top|start"
            android:imeOptions="actionDone"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:text="@string/action_add"/>
</LinearLayout>